@@ -30,11 +30,9 @@ plugins/build/executer.c
 plugins/build-basic-autotools/build-basic-autotools.c
 plugins/class-gen/clsGen.c
 plugins/cvs-plugin/anjuta-cvs-plugin.glade
-plugins/cvs-plugin/cvs.c
 plugins/cvs-plugin/cvs-actions.c
+plugins/cvs-plugin/cvs-callbacks.c
 plugins/cvs-plugin/cvs-execute.c
-plugins/cvs-plugin/cvs_cbs.c
-plugins/cvs-plugin/cvs_gui.c
 plugins/cvs-plugin/plugin.c
 plugins/debug-manager/anjuta-debug-manager.glade
 plugins/debug-manager/attach_process.c
@@ -90,6 +88,12 @@ plugins/gtodo/preferences.c
 plugins/gtodo/tasklists.c
 plugins/gtodo/todo_db.c
 plugins/gtodo/tray-icon.c
+plugins/macro/anjuta-macro.glade
+plugins/macro/macro-db.c
+plugins/macro/macro-dialog.c
+plugins/macro/macro-edit.c
+plugins/macro/macros.xml
+plugins/macro/plugin.c
 plugins/message-view/anjuta-message-manager-plugin.glade
 plugins/message-view/message-view.c
 plugins/message-view/plugin.c
@@ -102,10 +106,13 @@ plugins/project-manager/project_import_cbs.c
 plugins/project-manager/project_import_gui.c
 plugins/project-manager/source.c
 plugins/project-manager/src_paths.c
-plugins/project-wizard/appwizard_cbs.c
-plugins/project-wizard/appwizard_gui.c
-plugins/project-wizard/gnome_project.c
-plugins/project-wizard/wizard_gui.c
+plugins/project-wizard/anjuta-project-wizard.glade
+plugins/project-wizard/druid.c
+plugins/project-wizard/install.c
+plugins/project-wizard/property.c
+plugins/project-wizard/templates/anjuta-plugin/src/plugin.c
+plugins/project-wizard/templates/anjuta-plugin/src/plugin.glade
+plugins/project-wizard/templates/gtk/src/project.glade
 plugins/sample1/plugin.c
 plugins/symbol-browser/an_symbol_view.c
 plugins/symbol-browser/plugin.c
@@ -126,8 +133,6 @@ src/anjuta_info.c
 src/anjuta_info.h
 src/controls.c
 src/controls.h
-src/dnd.c
-src/dnd.h
 src/fileselection.c
 src/fileselection.h
 src/glade_iface.c
@@ -143,8 +148,6 @@ src/main_menubar.c
 src/main_menubar.h
 src/mainmenu_callbacks.c
 src/mainmenu_callbacks.h
-src/preferences.c
-src/preferences.h
 src/shell.c
 src/support.c
 src/toolbar.c
