@@ -1,1 +1,3 @@
 anjuta_dialogs_strings.c
+anjuta.desktop.in
+
