@@ -1,3 +1,9 @@
+2005-01-21  Johannes Schmid <jhs@cvs.gnome.org>
+	
+	* po/POTFILES.in
+	po/POTFILES.skip
+	Removed obsolete and added new files to the list
+
 2005-01-06  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
